--- a/notebooks/10_ML/Exploration.ipynb
+++ b/notebooks/10_ML/Exploration.ipynb
@@ -2,27 +2,685 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tra/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
-    "#compute mendelian errors"
+    "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import h5py\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#compute probrabilities"
+    "#compute mendelian errors (biallelic)\n",
+    "def compute_mendelian_errors(mother, father, offspring):\n",
+    "    num_errors = 0\n",
+    "    num_ofs_problems = 0\n",
+    "    if len(mother.union(father)) == 1:\n",
+    "        # Mother and father are homo and the same\n",
+    "        for ofs in offspring:\n",
+    "            if len(ofs) == 2:\n",
+    "                # Offspring is het\n",
+    "                num_errors += 1\n",
+    "                num_ofs_problems += 1\n",
+    "            elif len(ofs.intersection(mother)) == 0:\n",
+    "                # Offspring is homo, but opposite from parents\n",
+    "                num_errors += 2\n",
+    "                num_ofs_problems += 1\n",
+    "    elif len(mother) == 1 and len(father) == 1:\n",
+    "        # Mother and father are homo and different\n",
+    "        for ofs in offspring:\n",
+    "            if len(ofs) == 1:\n",
+    "                # Homo, should be het\n",
+    "                num_errors += 1\n",
+    "                num_ofs_problems += 1\n",
+    "    elif len(mother) == 2 and len(father) == 2:\n",
+    "        # Both are het, individual offspring can be anything\n",
+    "        pass\n",
+    "    else:\n",
+    "        # One is het, the other is homo\n",
+    "        homo = mother if len(mother) == 1 else father\n",
+    "        for ofs in offspring:\n",
+    "            if len(ofs) == 1 and ofs.intersection(homo):\n",
+    "                # homo, but not including the allele from parent that is homo\n",
+    "                num_errors += 1\n",
+    "                num_ofs_problems += 1\n",
+    "    return num_errors, num_ofs_problems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compute probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5_3L = h5py.File('ag1000g.crosses.phase1.ar3sites.3L.h5', 'r')\n",
+    "calldata_genotype = h5_3L['/3L/calldata/genotype']\n",
+    "num_alleles = h5_3L['/3L/variants/num_alleles']\n",
+    "is_snp = h5_3L['/3L/variants/is_snp']\n",
+    "POS = h5_3L['/3L/variants/POS']\n",
+    "samples_hdf5 = map(lambda sample: sample.decode('utf-8'), h5_3L['/3L/samples'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_family_indexes(samples_hdf5, cross_pd):\n",
+    "    for individual in cross_pd.iterrows():\n",
+    "        print(type(individual[1]))\n",
+    "    print(individual[1])\n",
+    "    return {'mother': mother, 'father': father, 'offspring': offspring}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "id            AD0253-C\n",
+      "cross       cross-29-2\n",
+      "sex                  M\n",
+      "function       progeny\n",
+      "Name: 21, dtype: object\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'mother' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-7003838af1db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msamples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'samples.tsv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcross_pd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msamples\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cross'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'cross-29-2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mget_family_indexes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples_hdf5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcross_pd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-24c68bf83ef3>\u001b[0m in \u001b[0;36mget_family_indexes\u001b[0;34m(samples_hdf5, cross_pd)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'mother'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'father'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfather\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'offspring'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moffspring\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'mother' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "samples = pd.read_csv('samples.tsv', sep='\\t')\n",
+    "cross_pd = samples[samples['cross'] == 'cross-29-2']\n",
+    "get_family_indexes(samples_hdf5, cross_pd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "473 True\n",
+      "605 True\n",
+      "625 True\n",
+      "645 True\n",
+      "651 True\n",
+      "652 True\n",
+      "655 True\n",
+      "711 True\n",
+      "776 True\n",
+      "778 True\n",
+      "791 True\n",
+      "805 True\n",
+      "811 True\n",
+      "814 True\n",
+      "888 True\n",
+      "890 True\n",
+      "9586 True\n",
+      "9594 True\n",
+      "9598 True\n",
+      "9608 True\n",
+      "9627 True\n",
+      "9661 True\n",
+      "9662 True\n",
+      "9664 True\n",
+      "9680 True\n",
+      "9681 True\n",
+      "9683 True\n",
+      "9687 True\n",
+      "9691 True\n",
+      "9709 True\n",
+      "9712 True\n",
+      "9720 True\n",
+      "9734 True\n",
+      "9742 True\n",
+      "9749 True\n",
+      "9774 True\n",
+      "9775 True\n",
+      "9777 True\n",
+      "9790 True\n",
+      "9798 True\n",
+      "9812 True\n",
+      "9818 True\n",
+      "9829 True\n",
+      "9831 True\n",
+      "9849 True\n",
+      "9853 True\n",
+      "9859 True\n",
+      "9867 True\n",
+      "9869 True\n",
+      "9877 True\n",
+      "9881 True\n",
+      "9883 True\n",
+      "9889 True\n",
+      "9894 True\n",
+      "9903 True\n",
+      "9909 True\n",
+      "9911 True\n",
+      "9914 True\n",
+      "9915 True\n",
+      "9917 True\n",
+      "9926 True\n",
+      "9934 True\n",
+      "9936 True\n",
+      "9948 True\n",
+      "9954 True\n",
+      "9965 True\n",
+      "9967 True\n",
+      "9968 True\n",
+      "9969 True\n",
+      "9971 True\n",
+      "9986 True\n",
+      "9990 True\n",
+      "9992 True\n",
+      "10015 True\n",
+      "10023 True\n",
+      "10026 True\n",
+      "10030 True\n",
+      "10033 True\n",
+      "10034 True\n",
+      "10044 True\n",
+      "10048 True\n",
+      "10056 True\n",
+      "10064 True\n",
+      "10067 True\n",
+      "10074 True\n",
+      "10090 True\n",
+      "10091 True\n",
+      "10095 True\n",
+      "10107 True\n",
+      "10112 True\n",
+      "10126 True\n",
+      "10132 True\n",
+      "10144 True\n",
+      "10163 True\n",
+      "10179 True\n",
+      "10180 True\n",
+      "10192 True\n",
+      "10207 True\n",
+      "10214 True\n",
+      "10216 True\n",
+      "10222 True\n",
+      "10239 True\n",
+      "10253 True\n",
+      "10265 True\n",
+      "10266 True\n",
+      "10269 True\n",
+      "10273 True\n",
+      "10291 True\n",
+      "10308 True\n",
+      "10314 True\n",
+      "10322 True\n",
+      "10325 True\n",
+      "10344 True\n",
+      "10368 True\n",
+      "10369 True\n",
+      "10387 True\n",
+      "10391 True\n",
+      "10408 True\n",
+      "10414 True\n",
+      "10415 True\n",
+      "10419 True\n",
+      "10420 True\n",
+      "10429 True\n",
+      "10431 True\n",
+      "10433 True\n",
+      "10434 True\n",
+      "10439 True\n",
+      "10441 True\n",
+      "10449 True\n",
+      "10451 True\n",
+      "10454 True\n",
+      "10463 True\n",
+      "10465 True\n",
+      "10475 True\n",
+      "10500 True\n",
+      "10511 True\n",
+      "10516 True\n",
+      "10531 True\n",
+      "10541 True\n",
+      "10543 True\n",
+      "10544 True\n",
+      "10558 True\n",
+      "10559 True\n",
+      "10567 True\n",
+      "10577 True\n",
+      "10592 True\n",
+      "10595 True\n",
+      "10599 True\n",
+      "10602 True\n",
+      "10604 True\n",
+      "10605 True\n",
+      "10609 True\n",
+      "10610 True\n",
+      "10629 True\n",
+      "10631 True\n",
+      "10640 True\n",
+      "10646 True\n",
+      "10657 True\n",
+      "10674 True\n",
+      "10694 True\n",
+      "10702 True\n",
+      "10706 True\n",
+      "10716 True\n",
+      "10760 True\n",
+      "10795 True\n",
+      "10797 True\n",
+      "10798 True\n",
+      "10799 True\n",
+      "10806 True\n",
+      "10825 True\n",
+      "10831 True\n",
+      "10834 True\n",
+      "10835 True\n",
+      "10846 True\n",
+      "10878 True\n",
+      "10888 True\n",
+      "10892 True\n",
+      "10922 True\n",
+      "10924 True\n",
+      "10933 True\n",
+      "10966 True\n",
+      "10968 True\n",
+      "10972 True\n",
+      "10983 True\n",
+      "10988 True\n",
+      "10994 True\n",
+      "11002 True\n",
+      "11008 True\n",
+      "11012 True\n",
+      "11050 True\n",
+      "11053 True\n",
+      "11062 True\n",
+      "11064 True\n",
+      "11071 True\n",
+      "11090 True\n",
+      "11113 True\n",
+      "11118 True\n",
+      "11143 True\n",
+      "11155 True\n",
+      "11186 True\n",
+      "11187 True\n",
+      "11188 True\n",
+      "11198 True\n",
+      "11210 True\n",
+      "11215 True\n",
+      "11221 True\n",
+      "11223 True\n",
+      "11231 True\n",
+      "11238 True\n",
+      "11243 True\n",
+      "11257 True\n",
+      "11264 True\n",
+      "11269 True\n",
+      "11277 True\n",
+      "11292 True\n",
+      "11296 True\n",
+      "11308 True\n",
+      "11323 True\n",
+      "11327 True\n",
+      "11351 True\n",
+      "11365 True\n",
+      "11382 True\n",
+      "11400 True\n",
+      "11407 True\n",
+      "11423 True\n",
+      "11426 True\n",
+      "11434 True\n",
+      "11450 True\n",
+      "11451 True\n",
+      "11452 True\n",
+      "11455 True\n",
+      "11459 True\n",
+      "11460 True\n",
+      "11475 True\n",
+      "11488 True\n",
+      "11493 True\n",
+      "11496 True\n",
+      "11518 True\n",
+      "11519 True\n",
+      "11528 True\n",
+      "11540 True\n",
+      "11548 True\n",
+      "11588 True\n",
+      "11590 True\n",
+      "11597 True\n",
+      "11602 True\n",
+      "11605 True\n",
+      "11606 True\n",
+      "11609 True\n",
+      "11616 True\n",
+      "11622 True\n",
+      "11625 True\n",
+      "11630 True\n",
+      "11635 True\n",
+      "11642 True\n",
+      "11653 True\n",
+      "11674 True\n",
+      "11678 True\n",
+      "11705 True\n",
+      "11710 True\n",
+      "11724 True\n",
+      "11727 True\n",
+      "11730 True\n",
+      "11734 True\n",
+      "11747 True\n",
+      "11755 True\n",
+      "11767 True\n",
+      "11775 True\n",
+      "11776 True\n",
+      "11793 True\n",
+      "11796 True\n",
+      "11801 True\n",
+      "11805 True\n",
+      "11812 True\n",
+      "11817 True\n",
+      "11823 True\n",
+      "11824 True\n",
+      "11854 True\n",
+      "11857 True\n",
+      "11858 True\n",
+      "11861 True\n",
+      "11862 True\n",
+      "11869 True\n",
+      "11871 True\n",
+      "11879 True\n",
+      "11883 True\n",
+      "11887 True\n",
+      "11900 True\n",
+      "11905 True\n",
+      "11909 True\n",
+      "11915 True\n",
+      "11916 True\n",
+      "11923 True\n",
+      "11932 True\n",
+      "11954 True\n",
+      "11961 True\n",
+      "11965 True\n",
+      "11970 True\n",
+      "11973 True\n",
+      "11977 True\n",
+      "18338 True\n",
+      "18349 True\n",
+      "18370 True\n",
+      "18377 True\n",
+      "18386 True\n",
+      "18389 True\n",
+      "18422 True\n",
+      "18430 True\n",
+      "18434 True\n",
+      "18568 True\n",
+      "18590 True\n",
+      "18594 True\n",
+      "18595 True\n",
+      "18611 True\n",
+      "18639 True\n",
+      "18650 True\n",
+      "18657 True\n",
+      "18756 True\n",
+      "18761 True\n",
+      "18763 True\n",
+      "18765 True\n",
+      "18766 True\n",
+      "18767 True\n",
+      "18776 True\n",
+      "18782 True\n",
+      "18801 True\n",
+      "18804 True\n",
+      "18813 True\n",
+      "18815 True\n",
+      "18820 True\n",
+      "18821 True\n",
+      "18822 True\n",
+      "18841 True\n",
+      "18853 True\n",
+      "18857 True\n",
+      "18859 True\n",
+      "18862 True\n",
+      "18877 True\n",
+      "18878 True\n",
+      "18879 True\n",
+      "18886 True\n",
+      "18900 True\n",
+      "18902 True\n",
+      "18930 True\n",
+      "18934 True\n",
+      "18935 True\n",
+      "18950 True\n",
+      "18951 True\n",
+      "18954 True\n",
+      "18961 True\n",
+      "18962 True\n",
+      "18964 True\n",
+      "18965 True\n",
+      "18968 True\n",
+      "18969 True\n",
+      "18982 True\n",
+      "18985 True\n",
+      "18986 True\n",
+      "18988 True\n",
+      "18990 True\n",
+      "18993 True\n",
+      "19004 True\n",
+      "19006 True\n",
+      "19012 True\n",
+      "19017 True\n",
+      "19019 True\n",
+      "19046 True\n",
+      "19049 True\n",
+      "19059 True\n",
+      "19081 True\n",
+      "19085 True\n",
+      "19091 True\n",
+      "19096 True\n",
+      "19116 True\n",
+      "19130 True\n",
+      "19156 True\n",
+      "19160 True\n",
+      "19162 True\n",
+      "19168 True\n",
+      "19179 True\n",
+      "19183 True\n",
+      "19193 True\n",
+      "19195 True\n",
+      "19202 True\n",
+      "19203 True\n",
+      "19207 True\n",
+      "19223 True\n",
+      "19236 True\n",
+      "19237 True\n",
+      "19259 True\n",
+      "19261 True\n",
+      "19278 True\n",
+      "19281 True\n",
+      "19303 True\n",
+      "19323 True\n",
+      "19325 True\n",
+      "19331 True\n",
+      "19343 True\n",
+      "19347 True\n",
+      "19349 True\n",
+      "19355 True\n",
+      "19358 True\n",
+      "19359 True\n",
+      "19379 True\n",
+      "19387 True\n",
+      "19398 True\n",
+      "19406 True\n",
+      "19410 True\n",
+      "19429 True\n",
+      "19436 True\n",
+      "19442 True\n",
+      "19486 True\n",
+      "19487 True\n",
+      "19590 True\n",
+      "19593 True\n",
+      "19600 True\n",
+      "19608 True\n",
+      "19609 True\n",
+      "19612 True\n",
+      "19619 True\n",
+      "19623 True\n",
+      "19633 True\n",
+      "19634 True\n",
+      "19635 True\n",
+      "19636 True\n",
+      "19639 True\n",
+      "19645 True\n",
+      "19650 True\n",
+      "19652 True\n",
+      "19663 True\n",
+      "19665 True\n",
+      "19668 True\n",
+      "19670 True\n",
+      "19673 True\n",
+      "19678 True\n",
+      "19680 True\n",
+      "19688 True\n",
+      "19692 True\n",
+      "20016 True\n",
+      "20020 True\n",
+      "20037 True\n",
+      "20039 True\n",
+      "20048 True\n",
+      "20056 True\n",
+      "20058 True\n",
+      "20059 True\n",
+      "20065 True\n",
+      "20070 True\n",
+      "20072 True\n",
+      "20076 True\n",
+      "20077 True\n",
+      "20083 True\n",
+      "20087 True\n",
+      "20090 True\n",
+      "20097 True\n",
+      "20099 True\n",
+      "20100 True\n",
+      "20101 True\n",
+      "20109 True\n",
+      "20111 True\n",
+      "20119 True\n",
+      "20134 True\n",
+      "20148 True\n",
+      "20153 True\n",
+      "20154 True\n",
+      "20155 True\n",
+      "20162 True\n",
+      "20165 True\n",
+      "20167 True\n",
+      "20179 True\n",
+      "20185 True\n",
+      "20186 True\n",
+      "20189 True\n",
+      "20195 True\n",
+      "20196 True\n",
+      "20199 True\n",
+      "20202 True\n",
+      "20204 True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, genotype in enumerate(calldata_genotype):\n",
+    "    if is_snp[i] and num_alleles[i] == 2:\n",
+    "        if len(np.where(genotype == -1)[0]) > 1:\n",
+    "            # Missing data\n",
+    "            continue\n",
+    "        print(POS[i], True)\n",
+    "    if i % 10000 == 0:\n",
+    "        print(POS[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0]), array([0, 1]))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([[-1, -1]])\n",
+    "np.where(a==-1)"
    ]
   }
  ],
