--- a/notebooks/10_ML/Exploration.ipynb
+++ b/notebooks/10_ML/Exploration.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tra/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import random\n",
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1259,8 +1252,8 @@
     "        father = set(genotype[father_index])\n",
     "        offspring = [set(genotype[ofs_index]) for ofs_index in offspring_indexes]\n",
     "        mendelian_errors = compute_mendelian_errors(mother, father, offspring)\n",
-    "        #if i % 10000 == 0:\n",
-    "        #    print(POS[i])\n",
+    "        if i % 10000 == 0:\n",
+    "            print(POS[i])\n",
     "        if mendelian_errors[0] > 0:\n",
     "            #print(POS[i], True, mother, father, offspring)\n",
     "            yield POS[i], mendelian_errors\n",
@@ -1272,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1292,7 @@
        "541688"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,12 +1316,31 @@
     "            error_mq0.append(MQ0[i])\n",
     "        else:\n",
     "            ok_mq0.append(MQ0[i])\n",
-    "    return error_mq0, ok_mq0"
+    "    return {\n",
+    "        'MQ0': {\n",
+    "            'errors': error_mq0,\n",
+    "            'OK': ok_mq0\n",
+    "        }\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mendelian_stats = get_stats()\n",
+    "fig, axs = plt.subplots(1, 1, squeeze=False, fig_size=(16, 9))\n",
+    "ax = axs[0][0]\n",
+    "MQ0_stats = mendelian_stats['MQ0']\n",
+    "ax.set_title('MQ0')\n",
+    "ax.boxplot([MQ0_stats['errors'], MQ0_stats['OK']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1349,7 @@
        "(array([0, 0]), array([0, 1]))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
