--- a/notebooks/10_ML/Decision_Trees.ipynb
+++ b/notebooks/10_ML/Decision_Trees.ipynb
@@ -9,7 +9,59 @@
     "import gzip\n",
     "import pickle\n",
     "\n",
-    "from sklearn.tree import DecisionTreeClassifier\n"
+    "import numpy as np\n",
+    "import pygraphviz\n",
+    "from sklearn import tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mendelian_errors = pickle.load(open('mendelian_errors.pickle', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cost function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mendelian_errors[473]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree"
    ]
   },
   {
@@ -18,7 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mendelian_errors = pickle.loads(gzip.open('mendelian_errors.pickle', 'rb'))"
+    "feature_fit = np.load(gzip.load('feature_fit.npy.gz'))\n",
+    "train_X = feature_fit[:,:-1]\n",
+    "train_Y = feature_fit[:,-1]\n",
+    "feature_names = pickle.load(open('ordered_features', 'rb'))"
    ]
   },
   {
@@ -27,9 +82,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = DecisionTreeClassifier(max_leaf_nodes=3, random_state=0)\n",
-    "estimator.fit(X_train, y_train)\n"
+    "estimator = tree.DecisionTreeClassifier(max_leaf_nodes=3, random_state=0)\n",
+    "tree_fit = estimator.fit(train_X, train_Y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-333a1e44b43f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgraphviz_representation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport_graphviz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygraphviz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraphviz_representation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'clf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "graphviz_representation = tree.export_graphviz(tree_fit, out_file=None,\n",
+    "                                               feature_names=ordered_features,\n",
+    "                                               filled=True, rounded=True, special_characters=True)\n",
+    "#class_names\n",
+    "graph = pygraphviz.Source(graphviz_representation)\n",
+    "#render"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -48,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
