--- a/notebooks/10_ML/ML_Preparation.ipynb
+++ b/notebooks/10_ML/ML_Preparation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = preprocessing.StandardScaler(copy=False)\n",
+    "scaler.fit(feature_fit[:,:-1])\n",
+    "scaler.transform(feature_fit[:,:-1])\n",
+    "#Original feature fit is now lost\n",
+    "np.save(gzip.open('scaled_fit.npy.gz', 'wb'), feature_fit, allow_pickle=False, fix_imports=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_fit = np.load(gzip.open('feature_fit.npy.gz', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(541688, 540490)"
+       "(541688, 542763)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,23 +137,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2202.1343180142267,\n",
-       " 26.486503596858295,\n",
-       " 0.7413410732799964,\n",
-       " 27.331494449157162,\n",
-       " 6.1457497359660325,\n",
-       " 6920.343751865484,\n",
-       " -0.21837156654619705,\n",
-       " 0.5005535133776514]"
+       "[23296.14492494359,\n",
+       " 354.4712531963178,\n",
+       " 2202.834823334572,\n",
+       " 26.394092978247084,\n",
+       " 0.7403727784842284,\n",
+       " 6.4208739266266965,\n",
+       " 48.25709298630713,\n",
+       " 27.505034344566976,\n",
+       " 6.127750555447494,\n",
+       " 6888.283798799059,\n",
+       " -0.21749126743075584,\n",
+       " 0.49950435750439626]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = preprocessing.StandardScaler(copy=False)\n",
-    "scaler.fit(balanced_fit[:,:-1])\n",
+    "#scaler = preprocessing.StandardScaler(copy=False) #Do not do this\n",
+    "#scaler.fit(balanced_fit[:,:-1])  # especially this!!!!\n",
     "scaler.transform(balanced_fit[:,:-1])\n",
     "#Original balanced fit is now lost\n",
     "scaled_balanced_fit = balanced_fit # Better naming"
@@ -161,14 +187,18 @@
     {
      "data": {
       "text/plain": [
-       "[2.906836767848834e-16,\n",
-       " 5.230362688083622e-17,\n",
-       " 4.384680144491894e-17,\n",
-       " 2.2796659870733538e-17,\n",
-       " 1.0184959329343855e-16,\n",
-       " -1.1779296789538328e-13,\n",
-       " -1.480601037111294e-17,\n",
-       " 0.5005535133776514]"
+       "[-0.11944459975653862,\n",
+       " 0.055755755941762714,\n",
+       " -0.12669210827118677,\n",
+       " 0.49732652814859485,\n",
+       " 0.0707018260772035,\n",
+       " 0.20941068744381267,\n",
+       " -0.19261029852554243,\n",
+       " 0.054477874701126534,\n",
+       " 0.9021480612348493,\n",
+       " 0.5987402725495994,\n",
+       " -0.10209079927433425,\n",
+       " 0.49950435750439626]"
       ]
      },
      "execution_count": 11,
@@ -197,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "(1082178, 8)"
+       "(1084451, 12)"
       ]
      },
      "execution_count": 13,
@@ -211,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,6 +279,13 @@
     "np.save(gzip.open('scaled_balanced_fit_1_test.npy.gz', 'wb'), scaled_balanced_fit_100_test[\n",
     "    np.random.random(scaled_balanced_fit_100_test.shape[0]) <= 0.01], allow_pickle=False, fix_imports=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
